wp-content/themes/starting-theme/sass/elements/_elements.scss
html {
	box-sizing: border-box;
}

*,
*:before,
*:after { /* Inherit box-sizing to make it easier to change the property for components that leverage other behavior; see https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
	box-sizing: inherit;
}

body {
	background: $color__background-body; /* Fallback for when there is no custom background color defined. */
}

hr {
	border-top: 1px dotted $color__background-hr;
	// border: 0;
	height: 1px;
	margin-bottom: 1.5em;
}

@import "lists";

img {
	height: auto; /* Make sure images are scaled correctly. */
	max-width: 100%; /* Adhere to container width. */
}

figure {
	margin: 1em 0; /* Extra wide images within figure tags don't overflow the content area. */
}

.vert-align {
	position: absolute;
	top: 50%;
	width: calc(100% - 30px);
	-webkit-transform: translateY(-50%);
	-moz-transform: translateY(-50%);
	-ms-transform: translateY(-50%);
	-o-transform: translateY(-50%);
	transform: translateY(-50%);
}

a.policy {
	margin-top: 50px;
	text-decoration: none;
	color: rgba(88, 84, 77, .8);
	font-size: 12px;
	display: block;
	transition: 0.3s;
	text-align: center;
}
a.policy:hover, a.policy:focus {
	color: #000;
}

@import "tables";

.container-fluid.stockists {
	padding-left: 20px !important;
  padding-right: 20px !important;
	@include md {
		padding-left: 50px !important;
	  padding-right: 50px !important;
	}

}

.stockists {
	padding-top: 50px;
	padding-bottom: 50px;
	@include md {
		padding-top: 100px;
		padding-bottom: 100px;
	}
	background: url(images/stockists_bg.jpg) center center no-repeat fixed;
	background-size: cover;
	position: relative;
	margin-bottom: 15px;
	color: #fff;
	.container {
		max-width: 100%;
	}
	h2 {
		text-transform: lowercase;
		text-align: center;
		font-family: $font-family-serif;
		// line-height: 2em;
		font-size: 32px;
		font-weight: 400;
		@include md {
			font-size: 43px;
		}
		@include lg {
			font-size: 54px;
		}
	}
	p {
		text-align: center;
		margin: 25px 10%;
		@include md {
			margin: 50px 20%;
		}
	}
	&_locations {
		color: #fff;
		position: relative;
		text-align: center;
		margin-bottom: 15px;
		border-style: solid;
		border-width: 26px 26px 27px 27px;
		-moz-border-image: url(images/border.png) 26 26 27 27 repeat;
		-webkit-border-image: url(images/border.png) 26 26 27 27 repeat;
		-o-border-image: url(images/border.png) 26 26 27 27 repeat;
		border-image: url(images/border.png) 26 26 27 27 fill repeat;
		&__location {
			margin-bottom: 40px;
			@include md {
				margin-bottom: 0;
			}
		}
		.bh-sl-container {
			input[type="text"] {
				width: 100%;
				margin-bottom: 15px;
				@include md {
					width: 80%;
					margin-bottom: 0;
				}
				float: left;
				padding: 9px;
			}
			button {
				float: left;
				margin-top: 0;
				width: 100%;
				@include md {
					width: 15%;
					margin-left: 4%;
				}
			}
		}
		h4 {
			font-family: $font-family-serif;
			font-size: 32px;
			span {
				font-size: 20px;
			}
		}
		p {
			text-align: center;
			font-weight: 700;
			font-size: 11px;
			padding: 0;
			margin: 0;
		}
		a {
			color: #fff;
			font-weight: 600;
			&:visited {
				color: #fff;
			}
		}
		button {
			margin-top: 15px;
			display: inline-block;
			background: #A1BEDE;
			color: #fff;
			text-transform: uppercase;
			font-size: 10px;
			padding: 15px 10px;
			border-radius: 5px;
			color: #fff;
			font-weight: 600;
			&:visited {
				color: #fff;
			}
			&:hover {
				background: #fff;
				color: #A1BEDE;
			}
		}
		label {
			text-align: left;
			font-weight: 600;
			width: 100%;
			font-size: 10px;
		}
		input[type="text"], input[type="email"], input[type="url"], input[type="password"], input[type="search"], input[type="number"], input[type="tel"], input[type="range"], input[type="date"], input[type="month"], input[type="week"], input[type="time"], input[type="datetime"], input[type="datetime-local"], input[type="color"], textarea {
			width: 100%;
		}
		.consent {
			font-size: 11px;
			text-align: left;
			&_wrapper {
				padding: 0 20px;
			}
			input {
				margin-left: -15px;
				margin-right: 5px;
			}
			a {
				font-weight: 600;
				color: #fff;
			}
		}
		.wpcf7-submit {
			display: block;
			width: 100%;
			margin-top: 25px;
			@include md {
				float: right;
				display: inline-block;
				margin-top: 0;
				width: 200px;
			}
			background: #A1BEDE;
			color: #fff;
			text-transform: uppercase;
			font-size: 10px;
			padding: 15px 30px;
			border-radius: 5px;
			color: #fff;
			font-weight: 600;
			transition: .5s;
			&:hover {
				background: #fff;
				color: #A1BEDE;
			}
		}
		.col-md-3 {
			@include md {
				border-left: 2px solid #fff;
				padding-bottom: 15px;
			}
			&:first-of-type {
				border: none;
			}
		}
	}
	.collapse {
		margin: 0;
		padding: 0;
	}
}

.bh-sl-container {
	.bh-sl-loc-list {
		background: #A1BEDE;
		color: #fff;
		padding: 25px;
		margin-bottom: 15px;
		h1 {
			font-family: $font-family-serif;
			font-size: 40px;
			text-align: center;
			margin-bottom: 50px;
			font-weight: 300;
		}
		.th {
			font-size: 11px;
			font-weight: 600;
			span {
				font-weight: 300;
				display: block;
			}
		}
		ul {
			margin: 25px 0 0 0;
			padding: 0;
			list-style: none;
			font-size: 15px;
			li {
				&:first-of-type {
					border-top: 1px dotted #fff;
				}
				background: transparent !important;
				border-bottom: 1px dotted #fff;
				padding: 25px 0;
				a {
					color: #fff;
					transition: .5s;
					&:hover {
						color: #006CE3;
					}
				}
			}
		}
		.loc-directions {
			padding-top: 15px;
			padding-bottom: 15px;
			@include md {
				padding-top: 0;
				padding-bottom: 0;
				text-align: center;
			}
			font-size: 12px;
			img {
				margin-top: 0;
			}
		}
		.loc-addr {
			font-size: 14px;
		}
	}

}

